components/ghost-on-openshift/deploy/05-ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      namespace: ghost
      labels:
        app: ghost
    spec:
      volumes:
        - name: ghost-static-ghost
          persistentVolumeClaim:
            claimName: ghost-static-ghost
        - name: ghost-config-prod
          secret:
            secretName: ghost-config-prod
            defaultMode: 420
        - name: tmp
          emptyDir:
            sizeLimit: 128Mi
      containers:
        - name: elclaustro
          image: ghcr.io/sredevopsdev/ghost-on-kubernetes:main
          ports:
            - name: http
              containerPort: 2368
              protocol: TCP
          resources:
            limits:
              cpu: '2'
              memory: 2Gi
            requests:
              cpu: '0'
              memory: '0'
          volumeMounts:
            - name: ghost-static-ghost
              mountPath: /var/lib/ghost/content
            - name: ghost-config-prod
              readOnly: true
              mountPath: /var/lib/ghost/config.production.json
              subPath: config.production.json
            - name: tmp
              mountPath: /tmp
              readOnly: false
          terminationMessagePath: /var/lib/ghost/content/logs/termination.log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: privileged
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3     
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 600
