components/ghost-on-openshift/deploy/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost
  labels:
    app: ghost
spec:
  ports:
  - port: 2368
    protocol: TCP
    targetPort: 2368
    name: http
  type: ClusterIP
  selector:
    app: ghost
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-ghost
  namespace: ghost
  labels:
    app: mysql-ghost
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
    name: mysqlgh
  type: ClusterIP
  selector:
    app: mysql-ghost
