components/ghost-on-openshift/deploy/03-ghost-ingress-cert-manager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ghost
  namespace: ghost
  labels:
    app: etbit-ghost
spec:
  rules:
    - host: "blog.apps.lab.etbit.io"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ghost
                port:
                  number: 2368
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - blog.apps.lab.etbit.io
    secretName: openshift-wildcard-certificate # < cert-manager will store the created certificate in this secret.
